--- a/classes/04/extra-work/pandas-dataframe_manipulation-lab/dataframe-manipulation-chipotle-data.ipynb
+++ b/classes/04/extra-work/pandas-dataframe_manipulation-lab/dataframe-manipulation-chipotle-data.ipynb
@@ -51,13 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "chip_file = './datasets/chipotle.tsv'"
+    "chip_file = pd.read_table('./datasets/chipotle.tsv')"
    ]
   },
   {
@@ -69,8 +67,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4617</th>\n",
+       "      <td>1833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Burrito</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Sour ...</td>\n",
+       "      <td>$11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4618</th>\n",
+       "      <td>1833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Burrito</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...</td>\n",
+       "      <td>$11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4619</th>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
+       "      <td>$11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4620</th>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Lettu...</td>\n",
+       "      <td>$8.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4621</th>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
+       "      <td>$8.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      order_id  quantity           item_name  \\\n",
+       "4617      1833         1       Steak Burrito   \n",
+       "4618      1833         1       Steak Burrito   \n",
+       "4619      1834         1  Chicken Salad Bowl   \n",
+       "4620      1834         1  Chicken Salad Bowl   \n",
+       "4621      1834         1  Chicken Salad Bowl   \n",
+       "\n",
+       "                                     choice_description item_price  \n",
+       "4617  [Fresh Tomato Salsa, [Rice, Black Beans, Sour ...    $11.75   \n",
+       "4618  [Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...    $11.75   \n",
+       "4619  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...    $11.25   \n",
+       "4620  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...     $8.75   \n",
+       "4621  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...     $8.75   "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chip_file.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A:"
@@ -89,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -370,9 +473,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ds42)",
+   "display_name": "Python (py2)",
    "language": "python",
-   "name": "ds42"
+   "name": "py2"
   },
   "language_info": {
    "codemirror_mode": {
