--- a/unit-project/project-1/starter-code/Project1.ipynb
+++ b/unit-project/project-1/starter-code/Project1.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "### Read and evaluate the following problem statement: \n",
-    "Determine which students will get admitted to UCLA, using their academic scoring (GRE and GPA) and the prestige of their high school."
+    "Determine which free-tier customers will covert to paying customers, using demographic data collected at signup (age, gender, location, and profession) and customer useage data (days since last log in, and activity score 1 = active user, 0= inactive user) based on Hooli data from Jan-Apr 2015. \n"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Admission (boolean)"
+    "Answer: Convert (y/n)"
    ]
   },
   {
@@ -42,21 +42,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: gre, gpa, prestige"
+    "Answer: days since last log in, activity score, age, gender, location, profession"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. How many examples are in the data set?"
+    "#### 3. What timeframe is this data relevent for?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: 400"
+    "Answer: Jan-Apr 2015"
    ]
   },
   {
@@ -70,14 +70,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Higher GRE, GPA, and prestige will lead to higher probability of admissions"
+    "Answer: Demographic and useage data will allow us to predict convert or not.\n",
+    "\n",
+    "low days since last log in, high activity score, older customer age, location doesn't matter all indicate converted customer."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's get started with our dataset"
+    "## Let's get started with our UCLA admissions dataset"
    ]
   },
   {
@@ -91,21 +93,236 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Answer:\n",
+    "\n",
     "Answer: \n",
     "\n",
     "Variable | Description | Type of Variable\n",
     "---| ---| ---\n",
     "admit | 0 = no 1 = yes | categorical\n",
-    "gre | thing in unit X | continuous \n",
-    "gpa | thing in unit X | continuous \n",
-    "prestige | 1 = low 2 = medium 3 = high | categorical\n"
+    "gre | int (score from 130-170) | continuous \n",
+    "gpa | int (score from 0.0-4.0) | continuous \n",
+    "prestige | 1 = low 2 = medium 3 = high | categorical\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We would like to explore the association between admit and each of the variables "
+    "We would like to explore the association between X and Y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'admit' is the dependent variable that we will be trying to solve for as outcome. 'gre', 'gpa', and 'prestige' are the independent variable predictors we are using."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. What is the outcome?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: admit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. What are the predictors/covariates? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer:gre, gpa, prestige"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. What timeframe is this data relevent for?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. What is the hypothesis?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: GRE, GPA, and Prestige all have predictive power in assessing admission. My hypothesis is that they are all positively correlated to admission."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.Using the above information, write a well-formed problem statement. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: Does GRE, GPA, and Prestige affect Admissions given data from ____, and if yes, how?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploratory Analysis Plan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the lab from a class as a guide, create an exploratory analysis plan. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. What are the goals of the exploratory analysis? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Answer: To understand the data: find null's, find outliers, see the correlationa and distribution to see skews, etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2a. What are the assumptions of the distribution of data? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: Generally fit a bell curve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2b. How will determine the distribution of your data? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Answer: Mean, Median, Mode. Plot in histogram to see tails."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3a. How might outliers impact your analysis? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Answer: Can skew correlations to mislead you"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3b. How will you test for outliers? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: Plot barplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4a. What is colinearity? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Answer: When one independent variable is highly correlated to another"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4b. How will you test for colinearity? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: Test correlation between independent variables, and remove one of them. Or use Principle Component Analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. What is your exploratory analysis plan?\n",
+    "Using the above information, write an exploratory analysis plan that would allow you or a colleague to reproduce your analysis 1 year from now. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: "
    ]
   },
   {
@@ -157,41 +374,6 @@
    ],
    "source": [
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are 400 examples of admissions, with 4 columns (admit, gre, gpa, prestige)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "'admit' is the dependent variable that we will be trying to solve for as outcome. 'gre', 'gpa', and 'prestige' are the independent variable predictors we are using."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Problem Statement"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How do we create a model to predict whether a student (given gre, gpa, and prestige) will get into UCLA?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Explore the Data"
    ]
   },
   {
@@ -802,253 +984,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. What is the outcome?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3. What are the predictors/covariates? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4. What timeframe is this data relevent for?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4. What is the hypothesis?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    Using the above information, write a well-formed problem statement. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Problem Statement"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exploratory Analysis Plan"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using the lab from a class as a guide, create an exploratory analysis plan. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. What are the goals of the exploratory analysis? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2a. What are the assumptions of the distribution of data? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2b. How will determine the distribution of your data? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3a. How might outliers impact your analysis? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3b. How will you test for outliers? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4a. What is colinearity? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4b. How will you test for colinearity? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5. What is your exploratory analysis plan?\n",
-    "Using the above information, write an exploratory analysis plan that would allow you or a colleague to reproduce your analysis 1 year from now. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer: "
+    "There are 400 examples of admissions, with 4 columns (admit, gre, gpa, prestige)"
    ]
   },
   {
