--- a/classes/05/notebooks/statistics-AB_testing_ttest_chi2-lesson/solution-code/split-tests-error-power-analysis-solutions.ipynb
+++ b/classes/05/notebooks/statistics-AB_testing_ttest_chi2-lesson/solution-code/split-tests-error-power-analysis-solutions.ipynb
@@ -291,9 +291,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ds42)",
+   "display_name": "Python (py2)",
    "language": "python",
-   "name": "ds42"
+   "name": "py2"
   },
   "language_info": {
    "codemirror_mode": {
