--- a/classes/05/notebooks/statistics-AB_testing_ttest_chi2-lesson/statistics-AB_testing_ttest_chi2-lesson.ipynb
+++ b/classes/05/notebooks/statistics-AB_testing_ttest_chi2-lesson/statistics-AB_testing_ttest_chi2-lesson.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -82,14 +82,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65.43333333333334\n",
+      "66.73333333333333\n",
+      "(30,)\n",
+      "(30,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Investigate here\n",
-    "\n"
+    "print(fulltime.mean())\n",
+    "print(parttime.mean())\n",
+    "print(fulltime.shape)\n",
+    "print(parttime.shape)\n"
    ]
   },
   {
@@ -127,15 +139,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=-1.643553370980969, pvalue=0.11106830737889971)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Performing a t-test using scipy\n",
-    "\n"
+    "stats.ttest_rel(fulltime, parttime)\n"
    ]
   },
   {
@@ -144,11 +166,20 @@
    "source": [
     "### <font color=blue>Check - </font> How do we interpret the p-value from this t-test?\n",
     "\n",
+    "Not statistically significant because pval not < 0.05\n",
+    "\n",
     "### <font color=blue>Discussion - </font> When I generated the data, I deliberately sampled it from two normal distributions with _different_ means. The null hypothesis was incorrect. Why couldn't we reject it?\n",
     "\n",
+    "Cannot reject the null hypothesis because the samples were not far enough from each other to confidently say that parttime is taller than fulltime\n",
+    "\n",
     "### Which elements of an experiment minimize Type II error?\n",
-    "- \n",
-    "- \n"
+    "- bigger sample?\n",
+    "- looser pvalue filter? (larger alpha)\n",
+    "\n",
+    "\n",
+    "Type 1: Accept the alternative when it is actually false\n",
+    "\n",
+    "Type 2: Reject alternative when it is actually true\n"
    ]
   },
   {
@@ -180,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +243,9 @@
     "\n",
     "It's important that the users sent to each arm are selected at random. If user assignments are affected by external factors — such as whether they are viewing the site on web or mobile browsers — then the arms have **selection bias**.\n",
     "\n",
-    "**What is the problem with choosing a picture if users were not randomly assigned?**"
+    "**What is the problem with choosing a picture if users were not randomly assigned?**\n",
+    "\n",
+    "Answer: selection bias - if only users that likes labs went to golden retriver page, the result would be that the win rate would be lower than normal. not indicative of total population."
    ]
   },
   {
@@ -246,13 +279,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# A:"
+    "table = np.array([[A_wins, A_loss],\n",
+    "                  [B_wins, B_loss]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4.8929516079407485,\n",
+       " 0.026966546110752252,\n",
+       " 1,\n",
+       " array([[103.58974359,  96.41025641],\n",
+       "        [ 98.41025641,  91.58974359]]))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = stats.chi2_contingency(table)\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.8929516079407485 0.026966546110752252\n"
+     ]
+    }
+   ],
+   "source": [
+    "chi2 = results[0]\n",
+    "pvalue = results[1]\n",
+    "print chi2, pvalue"
    ]
   },
   {
@@ -264,13 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# A:"
+    "# A: 2% chance that we think A is better than B when actually it's not"
    ]
   },
   {
@@ -282,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# A: "
+    "# A: A is the winner. I think we should accept cause 5% is good enough for me"
    ]
   },
   {
@@ -363,6 +441,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Q: \n",
+    "why too many repeated experiments increases Type 1 error? just running enough times that the alternative gets accepted?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "false positive the more dangerous error?\n",
+    "\n",
+    "Why do nasty population distributions still lead to normal curve sample dist? How does central limit theorem affect that?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -374,9 +471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ds42)",
+   "display_name": "Python (py2)",
    "language": "python",
-   "name": "ds42"
+   "name": "py2"
   },
   "language_info": {
    "codemirror_mode": {
