--- a/classes/06/notebooks/classification-knn_intro_to_classification-lesson/INCLASS-intro-to-classification-knn.ipynb
+++ b/classes/06/notebooks/classification-knn_intro_to_classification-lesson/INCLASS-intro-to-classification-knn.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "<img src=\"http://imgur.com/1ZcRyrc.png\" style=\"float: left; margin: 20px; height: 55px\">\n",
     "\n",
     "# Introduction to Classification with K-Nearest Neighbors\n",
@@ -371,7 +373,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A:\n",
@@ -845,7 +849,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A:\n",
@@ -933,9 +939,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ds42)",
+   "display_name": "Python (py2)",
    "language": "python",
-   "name": "ds42"
+   "name": "py2"
   },
   "language_info": {
    "codemirror_mode": {
